# alt-diagnostic-tool

./: .gitignore  40-adt.rules  CMakeLists.txt  data.json
.gear/: adt.spec  alt-diagnostic-tool.spec
.github/workflows/: codeql.yml
cmake/: TranslationUtils.cmake
docs/: alterator-interface-diag1.md  diag1-interface.md
setup/: adt.application  adt.desktop  ru.basealt.alterator.diag1.policy
src/app/: CMakeLists.txt  adtapp.cpp  adtapp.h  adtexecutor.cpp  adtexecutor.h  adtexecutorprivate.cpp  adtexecutorprivate.h  adtjsonloader.cpp  adtjsonloader.h  adtmodelbuilder.cpp  adtmodelbuilder.h  adtmodelbuilderstrategydomaindiag.cpp  adtmodelbuilderstrategydomaindiag.h  adtmodelbuilderstrategyfromjson.cpp  adtmodelbuilderstrategyfromjson.h  adtmodelbuilderstrategyinterface.cpp  adtmodelbuilderstrategyinterface.h  adtservicechecker.cpp  adtservicechecker.h  adtwizard.cpp  adtwizard.h  adtwizardbuilder.cpp  adtwizardbuilder.h  app_en.ts  app_ru.ts  categoryproxymodel.cpp  categoryproxymodel.h  choosecategory.cpp  choosecategory.h  clcontroller.cpp  clcontroller.h  domaindiagbuilderstrategy.cpp  domaindiagbuilderstrategy.h  domaindiagbuildstrategy.cpp  domaindiagbuildstrategy.h  executablestatuswidget.ui  iadtwizardbuilderstrategy.h  jsonloadbuilderstrategy.cpp  jsonloadbuilderstrategy.h  main.cpp  (+28 more)
src/app/adtbuilderstrategies/: adtmodelbuilder.cpp  adtmodelbuilderstrategydbusinfo.cpp  adtmodelbuilderstrategydbusinfo.h  adtmodelbuilderstrategydbusinfodesktop.cpp  adtmodelbuilderstrategydbusinfodesktop.h  adtmodelbuilderstrategydomaindiag.cpp  adtmodelbuilderstrategyfromjson.cpp  adtmodelbuilderstrategyfromjson.h
src/app/interfaces/: appcontrollerinterface.cpp  appcontrollerinterface.h  mainwindowcontrollerinterface.cpp  mainwindowcontrollerinterface.h  mainwindowinterface.cpp  mainwindowinterface.h  testswidgetinterface.cpp  testswidgetinterface.h  toolswidgetinterface.cpp  toolswidgetinterface.h
src/app/mainwindow/: clickablehighlightlabel.cpp  clickablehighlightlabel.h  clickablelabel.cpp  clickablelabel.h  detailsdialog.cpp  detailsdialog.h  maintestswidget.cpp  maintestswidget.h  maintestswidget.ui  maintoolswidget.cpp  maintoolswidget.h  maintoolswidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowsettings.h  serviceunregisteredwidget.cpp  serviceunregisteredwidget.h  statuscommonwidget.cpp  statuscommonwidget.h  statuscommonwidget.ui
src/app/parser/: commandlineoptions.cpp  commandlineoptions.h  commandlineparser.cpp  commandlineparser.h
src/app/settings/: adtsettingsimpl.cpp  adtsettingsimpl.h  adtsettingsinterface.h
src/core/: CMakeLists.txt  adtdesktopfileparser.cpp  adtdesktopfileparser.h  adtexecutable.cpp  adtexecutable.h  adtexecutablerunner.cpp  basereportcollector.cpp  basereportcollector.h  diagnostictool.cpp  ireportscollector.cpp  ireportscollector.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treemodelbuilderfromjson.cpp  treemodelbuilderfromjson.h  treemodelbuilderimpl.cpp  treemodelbuilderimpl.h  treemodelbuilderinterface.cpp  treemodelbuilderinterface.h  treemodelbulderfromexecutable.cpp  treemodelbulderfromexecutable.h
